test_scores/negative_dimers/features/O14654.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O14654.pkl.xz